# LycheeMem

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  README.zh.md  README_zh.md  a_frame_sessions.db  a_frame_sessions.db-shm  a_frame_sessions.db-wal  a_frame_skills.json  analyze_eval.py  analyze_patterns.py  backend.bat  docker-compose.yaml  frontend.bat  lychee_memos_users.db  lychee_memos_users.db-shm  lychee_memos_users.db-wal  lycheemem_sample0_sessions_1_25_full.json  main.py  pyproject.toml  test_coordinator.py  test_openai.py  test_openai_config.py
.github/: copilot-instructions.md
a_frame/: __init__.py  __main__.py
data/: a_frame_sessions.db  a_frame_sessions.db-shm  a_frame_sessions.db-wal  a_frame_skills.jsonl  lychee_memos_sessions.db-shm  lychee_memos_sessions.db-wal  sessions.db  sessions.db-shm  sessions.db-wal  skills.jsonl  users.db  users.db-shm  users.db-wal
demo/: .env.example  package-lock.json  package.json
docs/: Zep A Temporal Knowledge Graph Architecture for Agent Memory.md  graphiti-memory-system-analysis.md  locomo_reranker_repro.md  transformer_reranker_v0.md  视觉记忆性能优化指南.md
examples/: api_pipeline_demo.py  test_agent.py
openclaw-plugin/: INSTALL_OPENCLAW.md  INSTALL_OPENCLAW_zh.md  SKILL.md  index.ts  openclaw.plugin.json  package.json  plugin.json
scripts/: eval_locomo_qa_all.py
src/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_api_graphiti_fact_views.py  test_api_graphiti_search.py  test_api_graphiti_time_relation.py  test_atlascloud_provider_resolver.py  (+38 more)
(+239 files in other folders)
