[project]
name = "lycheemem"
version = "0.1.4"
description = "LycheeMem"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "fastapi[all]>=0.115.0",
    "litellm>=1.0.0",
    "openai>=1.77.0",
    "google-genai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "networkx>=3.2",
    "tiktoken>=0.9.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "numpy>=1.24.0",
    "lancedb>=0.20.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
# 本地 Embedding 支持（sentence-transformers）
local-embed = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
rerank = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "safetensors>=0.4.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
